# Gim

./: .gitignore  CHEATSHEET.md  README.md  pyproject.toml  requirements.txt  test.py
gim/: CHEATSHEET.md  __init__.py  __main__.py  app.py
gim/config/: __init__.py  theme.py
gim/core/: __init__.py  dsl.py  importers.py  models.py  operations.py  persistence.py  plotting.py  profile.py  stats.py  workspace.py
gim/ui/: __init__.py  command_console.py  dialogs.py  history_view.py  main_window.py  plot_panel.py  profile_panel.py  welcome.py  widgets.py
tests/: conftest.py  test_dsl.py  test_importers.py  test_persistence.py  test_plotting.py  test_profile.py  test_stats.py  test_ui_smoke.py  test_workspace.py
