[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gim-gui"
version = "0.1.0"
description = "History-first interactive data analysis workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<7",
  "pandas>=2.2,<3",
  "numpy>=2.0,<3",
  "scipy>=1.13,<2",
  "plotly>=6.0,<7",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
include = ["gim*"]

[tool.setuptools.package-data]
gim = ["CHEATSHEET.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
